# Proyecto1-Redes

./: README.md  client.py  main.py  requirements.txt  server.py
my_mcp_server/: README.md  client.py  client_test.py  cloud_server.py  pyproject.toml  server.py  test.py
my_mcp_server/chat_logs/: log.jsonl
