[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "my-mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.13.1",
    "requests>=2.32.5",
]

[tool.setuptools]
py-modules = ["server", "client"]  

[project.scripts]      
my-mcp-server = "server:main"
my-mcp-client = "client:run"